libs/parser/testdata/errors/lists/tab_char.csl
IPs:
	- 10.0.0.1
  - 10.1.0.1
